--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,41 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">MoviesApp</h1>
+    <p class="lead">Esta es una aplicacion de peliculas.</p>
+  </div>
+</div>
+
+<div class="container">
+  <br>
+
+  <h1>Cartelera</h1>
+  <hr>
+
+  <div class="row">
+
+    <div class="col-sm-6">
+      <div class="row">
+        <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/xFzrRTM1OHJAVNG6YGkZ1XTma9j.jpg)'}"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/sEO4wz7JtlWoGiKWvNemJTnCc9l.jpg)'}"></div>
+        <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/wBiDWF7YT8h5DqEj8lj1jL2o7rN.jpg)'}"></div>
+      </div>
+    </div>
+
+    
+    <div class="col-sm-6">
+        <div class="row">
+          <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/sEO4wz7JtlWoGiKWvNemJTnCc9l.jpg)'}"></div>
+          <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/wBiDWF7YT8h5DqEj8lj1jL2o7rN.jpg)'}"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/xFzrRTM1OHJAVNG6YGkZ1XTma9j.jpg)'}"></div>
+        </div>
+  
+      </div>
+
+  </div>
+</div>
