--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,28 +11,30 @@
   <h1>Cartelera</h1>
   <hr>
 
-  <div class="row">
+  <div class="row" ng *ngIf="cartelera">
 
     <div class="col-sm-6">
+
+
       <div class="row">
-        <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/xFzrRTM1OHJAVNG6YGkZ1XTma9j.jpg)'}"></div>
+        <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image': 'url('+(cartelera[0] | peliculaImagen)+')'}"></div>
       </div>
 
       <div class="row">
-        <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/sEO4wz7JtlWoGiKWvNemJTnCc9l.jpg)'}"></div>
-        <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/wBiDWF7YT8h5DqEj8lj1jL2o7rN.jpg)'}"></div>
+        <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url('+(cartelera[1] | peliculaImagen)+')'}"></div>
+        <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url('+(cartelera[2] | peliculaImagen)+')'}"></div>
       </div>
     </div>
 
     
     <div class="col-sm-6">
         <div class="row">
-          <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/sEO4wz7JtlWoGiKWvNemJTnCc9l.jpg)'}"></div>
-          <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/wBiDWF7YT8h5DqEj8lj1jL2o7rN.jpg)'}"></div>
+          <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url('+(cartelera[3] | peliculaImagen)+')'}"></div>
+          <div class="col-sm-6 div-pic-2" [ngStyle]="{'background-image': 'url('+(cartelera[4] | peliculaImagen)+')'}"></div>
         </div>
 
         <div class="row">
-          <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image': 'url(http://image.tmdb.org/t/p/w500/xFzrRTM1OHJAVNG6YGkZ1XTma9j.jpg)'}"></div>
+          <div class="col-md-12 div-pic-1" [ngStyle]="{'background-image': 'url('+(cartelera[5] | peliculaImagen)+')'}"></div>
         </div>
   
       </div>
