--- a/src/app/components/pelicula/pelicula.component.html
+++ b/src/app/components/pelicula/pelicula.component.html
@@ -1,3 +1,25 @@
-<p>
-  pelicula works!
-</p>
+<div *ngIf="pelicula" class="container main-container animated fadeIn fast">
+
+  <h1>{{pelicula.original_title}}</h1>
+  <span class="font-italic">Titulo en español: {{pelicula.title}}</span>
+
+  <div class="row">
+
+    <div class="col-md-5">
+      <img [src]="pelicula | peliculaImagen:true" [alt]="pelicula.original_title" class="img-thumbnail img-fluid">
+    </div>
+    <div class="col-md-7">
+      <h3>Sinopsis</h3>
+      <hr>
+      <p class="text.justify">{{pelicula.overview}}</p>
+
+      <h4>Frase celebre</h4>
+      <p>{{pelicula.tagline}}</p>
+      <p><strong>Popularidad: </strong><span class="badge badge-info">{{pelicula.popularity}}</span></p>
+      <p><strong>Promedio de votos: </strong><span class="badge badge-primary">{{pelicula.vote_average}}</span></p>
+      <p><strong>Cantidad de votos: </strong><span class="badge badge-secondary">{{pelicula.vote_count}}</span></p>
+    </div>
+
+  </div>
+
+</div>
