--- a/src/app/components/home/galeria.component.html
+++ b/src/app/components/home/galeria.component.html
@@ -12,6 +12,8 @@
       <div class="col-md-12 div-pic-1 puntero" 
             [ngStyle]="{'background-image': 'url('+(peliculas[0] | peliculaImagen)+')'}"
             [routerLink]="['/pelicula',peliculas[0].id, 'home']">
+
+            <p class="pic-titulo">{{peliculas[0].original_title}}</p>
       </div>
     </div>
 
@@ -19,10 +21,14 @@
       <div class="col-sm-6 div-pic-2 puntero" 
             [ngStyle]="{'background-image': 'url('+(peliculas[1] | peliculaImagen)+')'}"
             [routerLink]="['/pelicula',peliculas[1].id, 'home']">
+
+            <p class="pic-titulo">{{peliculas[1].original_title}}</p>
       </div>
       <div class="col-sm-6 div-pic-2 puntero" 
             [ngStyle]="{'background-image': 'url('+(peliculas[2] | peliculaImagen)+')'}"
             [routerLink]="['/pelicula',peliculas[2].id, 'home']">
+
+            <p class="pic-titulo">{{peliculas[2].original_title}}</p>
       </div>
     </div>
   </div>
@@ -33,10 +39,14 @@
         <div class="col-sm-6 div-pic-2 puntero" 
               [ngStyle]="{'background-image': 'url('+(peliculas[3] | peliculaImagen)+')'}"
               [routerLink]="['/pelicula',peliculas[3].id, 'home']">
+
+              <p class="pic-titulo">{{peliculas[3].original_title}}</p>
         </div>
         <div class="col-sm-6 div-pic-2 puntero" 
               [ngStyle]="{'background-image': 'url('+(peliculas[4] | peliculaImagen)+')'}"
               [routerLink]="['/pelicula',peliculas[4].id, 'home']">
+
+              <p class="pic-titulo">{{peliculas[4].original_title}}</p>
         </div>
       </div>
 
@@ -44,6 +54,8 @@
         <div class="col-md-12 div-pic-1 puntero" 
               [ngStyle]="{'background-image': 'url('+(peliculas[5] | peliculaImagen)+')'}"
               [routerLink]="['/pelicula',peliculas[5].id, 'home']">
+
+              <p class="pic-titulo">{{peliculas[5].original_title}}</p>
         </div>
       </div>
 
